kubeflow/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-ui
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
  - host: kubeflow.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
