kubeflow/rbacauth.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-from-same-ns
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
     - source:
        namespaces: ["kubeflow-user-example-com"]
